[package]
name = "exonum-lvm"
version = "0.10.1"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "example"]
categories = ["rust-patterns", "development-tools::testing"]
description = "Exonum blockchain example implementing a cryptocurrency."

[badges]
travis-ci = { repository = "exonum/exonum" }
circle-ci = { repository = "exonum/exonum" }

[dependencies]
exonum = "0.10.2"
exonum-derive = "0.10.0"
exonum-configuration = "0.10.1"
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.5"
protobuf = "2.2.0"
rlua = "0.16.2"

[dev-dependencies]
exonum-testkit = "0.10.1"
serde_json = "1.0.0"
pretty_assertions = "0.5.1"
assert_matches = "1.2.0"
hex = "0.3.2"

[build-dependencies]
exonum-build = "0.10.0"

[features]
default = ["with-serde"]
with-serde = []
